--- a/src/main/resources/templates/member/memberJoin.html
+++ b/src/main/resources/templates/member/memberJoin.html
@@ -1,185 +1,131 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <title>Join</title>
+<head><title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <!--    마지막에 변경
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/JavaScript" href="js/bootstrap.min.js"></script>-->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script>
+
+    </script>
     <style>
-        /*css
-        타입 선택자 h1{}
-        아이디 선택자 #id{}
-        클래스 선택자 .class{}
-        */
-        body {
-            background-color: #616161;
-            color: white;
-            font-family: 'DejaVu Serif', Georgia, "Times New Roman", Times, serif;
-            font-size: medium;
-            text-align: center;
-            margin: 0;
-        }
+        form{
 
-        h1 {
-            font-size: 3em;
-
-        }
-
-        .div-form {
-            border: 2px solid #27ff96;
+            margin: 50px auto;
             width: max-content;
-            margin: auto;
 
         }
 
-        #join {
-            padding: 20px;
-        }
-
-        form {
-            text-align: left;
-            width: max-content;
-            font-size: 2em;
-            margin: auto;
-            background-color: #761300;
-        }
-
-        div label {
-        / / font-size: 50 %;
-        }
-
-        #div1 {
-
-            width: 300px;
-            height: 300px;
-            background-color: darkred;
-            padding: 10px;
-            border: white 10px solid;
-            margin: 10px auto;
+       .inputs{
+           min-width: 400px;
 
         }
 
-        #div2 {
-
-            display: inline-block;
-            background-color: #491217;
-            width: 100px;
-            height: 100px;
-        }
-
-        .nav {
-            position: fixed;
-            top: 0;
-           // float: top;
-            margin-top: 0;
-            width: 100%;
-            background-color: white;
-        }
-
-
-        ul {
-            text-align: center;
-            border-top: 1px solid red;
-            border-bottom: 1px solid red;
-            padding: 15px 0;
-            width: 100%;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-
-        ul li {
-            display: inline;
-            text-transform: uppercase;
-            padding: 0 10px;
-            letter-spacing: 10px;
-        }
-
-        a:link {
-            color: #4b1a11;
-            text-decoration: none;
-        }
-
-        a:hover {
-            font-weight: bold;
-        }
-
-        a:visited {
-            color: #4b1a11;
-            font-weight: bold;
-        }
-
-        a:active {
-            font-weight: bold;
-        }
-
-        #active {
-            color: black;
-            font-weight: bold;
-        }
-        #div-body{
-            clear: both;
-
+        #join{
+            margin-top: 30px;
+            float: right;
         }
     </style>
 </head>
 <body>
-<div class="nav">
-    <ul>
-        <li><a href="/join" id="active">Join</a></li>
-        <li><a href="/member/login">Login</a></li>
-        <li><a href="/">Board</a></li>
-    </ul>
-</div>
+<nav class = "navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> Woom </font> </font> </a>
+    <button class = "navbar-toggler"type = "button"data-toggle = "collapse"data-target = "# navbarColor01"aria-controls = "navbarColor01"aria-expanded = "false"aria-label = "탐색 ">
+        <span class = "navbar-toggler-icon"> </span>
+    </button>
 
-<div id="div-body">
-    <h1>회원가입</h1>
-    <hr>
-    <div class="div-form">
-        <form action="/join" method="post">
-            <label>
-                <span>ID : </span>
-                <input type="text" name="id" autofocus placeholder="id를 입력하세요"/>
-            </label><br>
-            <label>
-                <span>PW : </span>
-                <input type="password" name="pw"/>
-            </label><br>
-            <label>
-                <span>NAME : </span>
-                <input type="text" name="name"/>
-            </label><br>
-            <label>
-                <span>ADDRESS : </span>
-                <input type="text" name="address"/>
-            </label><br>
-            <label>
-                <span>PHONE : </span>
-                <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" title="010-0000-0000"/>
-            </label><br>
-            <label>
-                <span>EMAIL : </span>
-                <input type="text" name="email"/>
-            </label><br>
-            <label>
-                <span>GENDER : M</span>
-                <input type="radio" name="gender" value="M"/>
-            </label>
-            <label for="W">
-                <span>W</span>
-            </label>
-            <input type="radio" name="gender" id="W" value="W"/><br>
-
-            <input type="submit" id="join" value="Join"/>
-
+    <div class = "collapse navbar-collapse"id = "navbarColor01">
+        <ul class = "navbar-nav mr-auto">
+            <li class = "nav-item active">
+                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 홈 </font> </font> <span class = "sr-only"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> (현재) </font> </font> </span > </a>
+            </li>
+            <li class = "nav-item">
+                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 풍모 </font> </font> </a>
+            </li>
+            <li class = "nav-item">
+                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 가격 </font> </font> </a>
+            </li>
+            <li class = "nav-item">
+                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 약 </font> </font> </a>
+            </li>
+        </ul>
+        <form class = "form-inline my-2 my-lg-0">
+            <input class = "form-control mr-sm-2"type = "text"자리 표시 자 = "검색">
+            <button class = "btn btn-secondary my-2 my-sm-0"type = "submit"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 검색 </font> </font> </button>
         </form>
     </div>
-</div>
+</nav>
+<form action="/join" method="post">
+    <fieldset>
+        <legend>회원가입</legend>
 
-<div id="div1">
-    ddddddddddddd
-</div>
-<div id="div2">
-    <p>dddddddd</p>
-</div>
-0000000
-lllll
+        <div class="form-group">
+            <label for="id">ID</label>
+            <input type="text" class="form-control inputs" id="id" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="idHelp" class="form-text text-muted">hjkhjk</small>
+        </div>
+        <div class="form-group">
+            <label for="pw">Password</label>
+            <input type="password" class="form-control inputs" id="pw" placeholder="Password">
+            <small id="pwHelp" class="form-text text-muted"></small>
+        </div>
+        <div class="form-group">
+            <label for="pw2">Password reconfirm</label>
+            <input type="password" class="form-control inputs" id="pw2" placeholder="Password">
+            <small id="pw2Help" class="form-text text-muted"></small>
+        </div>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control inputs" id="name" placeholder="Password">
+            <small id="namelHelp" class="form-text text-muted"></small>
+        </div>
+        <div class="form-group">
+            <label for="address">Address</label>
+            <input type="text" class="form-control inputs" id="address" placeholder="Password">
+            <small id="addresslHelp" class="form-text text-muted"></small>
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control inputs" id="phone" placeholder="Password">
+            <small id="phoneHelp" class="form-text text-muted"></small>
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control inputs" id="email" placeholder="Password">
+            <small id="emailHelp" class="form-text text-muted"></small>
+        </div>
+
+
+        <div class="form-check">
+            <label class="form-check-label">
+                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+                Man
+            </label>
+        </div>
+        <div class="form-check">
+            <label class="form-check-label">
+                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+                Woman
+            </label>
+        </div>
+
+
+        <button type="submit" class="btn btn-primary" id="join">JOIN</button>
+    </fieldset>
+</form>
+
+
 </body>
 </html>
