--- a/src/main/resources/templates/member/memberJoin.html
+++ b/src/main/resources/templates/member/memberJoin.html
@@ -18,111 +18,235 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script>
+        $(document).ready(function () {
+            var empty = true;
+            //아이디 중복체크(Ajax), 정규식 체크
+            // $('#id').on('keyup', function () {
+            //     var regExpId = /^[a-z]+[a-z0-9]{5,19}$/g;
+            //     var idVal = $('#id').val();
+
+            //     if (!regExpId.test(idVal)) {
+            //         $('#idHelp p').text('영문으로 시작하는 6~20자 영문 또는 숫자이어야 합니다.');
+            //         empty = false;
+            //         return false;
+            //     } else {
+            //         $.ajax({
+            //             url: 'idCheck',
+            //             type: 'POST',
+            //             data: {
+            //                 'id': idVal
+            //             },
+            //             success: function (data) {
+            //                 if (idVal === data) {
+            //                     $('#idHelp p').text('중복된 id 입니다.');
+            //                     empty = false;
+            //                     return false;
+            //                 } else {
+            //                     $('#idHelp p').text("사용 가능합니다");
+            //                 }
+            //
+            //             }
+            //         })
+            //     }
+            // });
+            //
+            // //비밀번호 정규식 체크
+            // $('#pw').on('keyup', function () {
+            //     var regExpPw = /^(?=.*\d{1,50})(?=.*[~`!@#$%\^&*()-+=]{1,50})(?=.*[a-zA-Z]{2,50}).{8,50}$/;
+            //
+            //     if (!regExpPw.test($('#pw').val())) {
+            //         $('#pwHelp p').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
+            //         empty = false;
+            //         return false;
+            //     } else {
+            //         $('#pwHelp p').text('사용가능한 비밀번호입니다.');
+            //     }
+            // });
+
+            //비밀번호 일치 확인
+            $('#pw2').on('blur', function () {
+                if ($('#pw').val() !== $('#pw2').val()) {
+                    $('#pw2Help p').text('비밀번호가 일치하지 않습니다.');
+                    empty = false;
+                    return false;
+                } else {
+                    $('#pw2Help p').text('');
+                }
+
+            });
+            //전화번호 체크
+            $('#phone').on('blur', function () {
+                var regExpPw = /^\d{3}-\d{3,4}-\d{4}$/;
+
+                if (!regExpPw.test($('#phone').val())) {
+                    $('#phoneHelp p').text('올바른 핸드폰번호가 아닙니다.');
+                    empty = false;
+                    return false;
+                } else {
+                    $('#phoneHelp p').text('');
+                }
+            });
+            //이메일 체크
+            $('#email').on('blur', function () {
+                var regExpEmail = /^[0-9a-zA-Z]([-_\.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_\.]?[0-9a-zA-Z])*\.[a-zA-Z]{2,3}$/i;
+
+                if (!regExpEmail.test($('#email').val())) {
+                    $('#emailHelp p').text('올바른 이메일이 아닙니다.');
+                    empty = false;
+                    return false;
+                } else {
+                    $('#emailHelp p').text('');
+                }
+            });
+
+            //폼태그가 정상적으로 입력 되어있으면 가입
+            $.aa = function () {
+                var inputs = $('.inputs');
+
+                inputs.each(function () {
+                    if($(this).val()==''){
+                        alert($(this).attr('id')+ '은 필수 입력사항입니다.');
+                        $(this).focus();
+                        empty= false;
+                        return false;
+                    }
+                });
+                if(!empty) return false;
+                $('form').submit();
+            }
+          /*  $('#join').on('submit', function (event) {
+                var inputs = $('.inputs');
+
+
+                inputs.each(function () {
+                    if($(this).val()==''){
+                        alert($(this).attr('id')+ '은 필수 입력사항입니다.');
+                        $(this).focus();
+                        empty= false;
+                        return false;
+                    }
+                });
+
+
+
+            })*/
+
+        });
+
+
 
     </script>
     <style>
-        form{
-
+        form {
             margin: 50px auto;
             width: max-content;
-
         }
 
-       .inputs{
-           min-width: 400px;
-
+        .inputs {
+            min-width: 400px;
         }
 
-        #join{
+        #join {
             margin-top: 30px;
             float: right;
+        }
+
+        .help p {
+            color: red;
         }
     </style>
 </head>
 <body>
-<nav class = "navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> Woom </font> </font> </a>
-    <button class = "navbar-toggler"type = "button"data-toggle = "collapse"data-target = "# navbarColor01"aria-controls = "navbarColor01"aria-expanded = "false"aria-label = "탐색 ">
-        <span class = "navbar-toggler-icon"> </span>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#"> <font style="vertical-align : inherit;"> <font style="vertical-align : inherit;">
+        Woom </font> </font> </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="# navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="false" aria-label="탐색 ">
+        <span class="navbar-toggler-icon"> </span>
     </button>
 
-    <div class = "collapse navbar-collapse"id = "navbarColor01">
-        <ul class = "navbar-nav mr-auto">
-            <li class = "nav-item active">
-                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 홈 </font> </font> <span class = "sr-only"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> (현재) </font> </font> </span > </a>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 홈 </font> </font> <span class="sr-only"> <font
+                        style="vertical-align : inherit;"> <font style="vertical-align : inherit;"> (현재) </font> </font> </span>
+                </a>
             </li>
-            <li class = "nav-item">
-                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 풍모 </font> </font> </a>
+            <li class="nav-item">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 풍모 </font> </font> </a>
             </li>
-            <li class = "nav-item">
-                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 가격 </font> </font> </a>
+            <li class="nav-item">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 가격 </font> </font> </a>
             </li>
-            <li class = "nav-item">
-                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 약 </font> </font> </a>
+            <li class="nav-item">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 약 </font> </font> </a>
             </li>
         </ul>
-        <form class = "form-inline my-2 my-lg-0">
-            <input class = "form-control mr-sm-2"type = "text"자리 표시 자 = "검색">
-            <button class = "btn btn-secondary my-2 my-sm-0"type = "submit"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 검색 </font> </font> </button>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" 자리 표시 자="검색">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit"><font style="vertical-align : inherit;"> <font
+                    style="vertical-align : inherit;"> 검색 </font> </font></button>
         </form>
     </div>
 </nav>
-<form action="/join" method="post">
+<form id="form" action="/join" method="post">
     <fieldset>
         <legend>회원가입</legend>
 
         <div class="form-group">
             <label for="id">ID</label>
-            <input type="text" class="form-control inputs" id="id" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="idHelp" class="form-text text-muted">hjkhjk</small>
+            <input type="text" class="form-control inputs" id="id" name="id" aria-describedby="idHelp"
+                   placeholder="Enter email">
+            <small id="idHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="pw">Password</label>
-            <input type="password" class="form-control inputs" id="pw" placeholder="Password">
-            <small id="pwHelp" class="form-text text-muted"></small>
+            <input type="password" class="form-control inputs" id="pw" name="pw" placeholder="Password">
+            <small id="pwHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="pw2">Password reconfirm</label>
-            <input type="password" class="form-control inputs" id="pw2" placeholder="Password">
-            <small id="pw2Help" class="form-text text-muted"></small>
+            <input type="password" class="form-control inputs" id="pw2" placeholder="Password reconfirm">
+            <small id="pw2Help" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control inputs" id="name" placeholder="Password">
-            <small id="namelHelp" class="form-text text-muted"></small>
+            <input type="text" class="form-control inputs" id="name" name="name" placeholder="Name">
+            <small id="namelHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="address">Address</label>
-            <input type="text" class="form-control inputs" id="address" placeholder="Password">
-            <small id="addresslHelp" class="form-text text-muted"></small>
+            <input type="text" class="form-control inputs" id="address" name="address" placeholder="Address">
+            <small id="addresslHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="text" class="form-control inputs" id="phone" placeholder="Password">
-            <small id="phoneHelp" class="form-text text-muted"></small>
+            <input type="text" class="form-control inputs" id="phone" name="phone" placeholder="010-0000-0000">
+            <small id="phoneHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" class="form-control inputs" id="email" placeholder="Password">
-            <small id="emailHelp" class="form-text text-muted"></small>
+            <input type="email" class="form-control inputs" id="email" name="email" placeholder="Email">
+            <small id="emailHelp" class="form-text text-muted help"><p></p></small>
         </div>
-
-
         <div class="form-check">
             <label class="form-check-label">
-                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+                <input type="radio" class="form-check-input" name="gender" id="optionsRadios1" value="Man"
+                       checked="">
                 Man
             </label>
         </div>
         <div class="form-check">
             <label class="form-check-label">
-                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+                <input type="radio" class="form-check-input" name="gender" id="optionsRadios2" value="Woman">
                 Woman
             </label>
         </div>
-
-
-        <button type="submit" class="btn btn-primary" id="join">JOIN</button>
+        <button type="button" class="btn btn-primary" id="join" onclick="$.aa()">JOIN</button>
     </fieldset>
 </form>
 
