--- a/src/main/resources/templates/member/memberJoin.html
+++ b/src/main/resources/templates/member/memberJoin.html
@@ -19,61 +19,68 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
-            var empty = true;
-            //아이디 중복체크(Ajax), 정규식 체크
-            // $('#id').on('keyup', function () {
-            //     var regExpId = /^[a-z]+[a-z0-9]{5,19}$/g;
-            //     var idVal = $('#id').val();
 
-            //     if (!regExpId.test(idVal)) {
-            //         $('#idHelp p').text('영문으로 시작하는 6~20자 영문 또는 숫자이어야 합니다.');
-            //         empty = false;
-            //         return false;
-            //     } else {
-            //         $.ajax({
-            //             url: 'idCheck',
-            //             type: 'POST',
-            //             data: {
-            //                 'id': idVal
-            //             },
-            //             success: function (data) {
-            //                 if (idVal === data) {
-            //                     $('#idHelp p').text('중복된 id 입니다.');
-            //                     empty = false;
-            //                     return false;
-            //                 } else {
-            //                     $('#idHelp p').text("사용 가능합니다");
-            //                 }
-            //
-            //             }
-            //         })
-            //     }
-            // });
-            //
-            // //비밀번호 정규식 체크
-            // $('#pw').on('keyup', function () {
-            //     var regExpPw = /^(?=.*\d{1,50})(?=.*[~`!@#$%\^&*()-+=]{1,50})(?=.*[a-zA-Z]{2,50}).{8,50}$/;
-            //
-            //     if (!regExpPw.test($('#pw').val())) {
-            //         $('#pwHelp p').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
-            //         empty = false;
-            //         return false;
-            //     } else {
-            //         $('#pwHelp p').text('사용가능한 비밀번호입니다.');
-            //     }
-            // });
+            //아이디 중복체크(Ajax), 정규식 체크
+
+            /* $('#id').on('keyup', function () {
+                 var regExpId = /^[a-z]+[a-z0-9]{5,19}$/g;
+                 var idVal = $('#id').val();
+
+                 if (!regExpId.test(idVal)) {
+                     $('#idHelp p').text('영문으로 시작하는 6~20자 영문 또는 숫자이어야 합니다.');
+                     empty = false;
+                     return false;
+                 } else {
+                     $.ajax({
+                         url: 'idCheck',
+                         type: 'POST',
+                         data: {
+                             'id': idVal
+                         },
+                         success: function (data) {
+                             if (idVal === data) {
+                                 $('#idHelp p').text('중복된 id 입니다.');
+                                 empty = false;
+                                 return false;
+                             } else {
+                                 $('#idHelp p').text("사용 가능합니다");
+                             }
+
+                         }
+                     })
+                 }
+             });
+
+             //비밀번호 정규식 체크
+             $('#pw').on('keyup', function () {
+                 var regExpPw = /^(?=.*\d{1,50})(?=.*[~`!@#$%\^&*()-+=]{1,50})(?=.*[a-zA-Z]{2,50}).{8,50}$/;
+
+                 if (!regExpPw.test($('#pw').val())) {
+                     $('#pwHelp p').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
+                     empty = false;
+                     return false;
+                 } else {
+                     $('#pwHelp p').text('사용가능한 비밀번호입니다.');
+                 }
+             });*/
 
             //비밀번호 일치 확인
-            $('#pw2').on('blur', function () {
+            var empty = true;
+            var pwCheck = $('#pw2').on('blur', function () {
                 if ($('#pw').val() !== $('#pw2').val()) {
                     $('#pw2Help p').text('비밀번호가 일치하지 않습니다.');
                     empty = false;
-                    return false;
+                    console.log(empty);
+                    return empty;
                 } else {
                     $('#pw2Help p').text('');
+                    console.log(empty);
+                    return empty;
                 }
 
             });
+
+
             //전화번호 체크
             $('#phone').on('blur', function () {
                 var regExpPw = /^\d{3}-\d{3,4}-\d{4}$/;
@@ -100,39 +107,44 @@
             });
 
             //폼태그가 정상적으로 입력 되어있으면 가입
-            $.aa = function () {
+
+            $('#join').on('click', function () {
                 var inputs = $('.inputs');
-
-                inputs.each(function () {
-                    if($(this).val()==''){
-                        alert($(this).attr('id')+ '은 필수 입력사항입니다.');
-                        $(this).focus();
-                        empty= false;
+                var check = true;
+                for (var i = 0; i < inputs.length; i++) {
+                    var input = inputs[i];
+                    var val = input.value;
+                    if (val === '') {
+                        input.focus();
+                        alert(input.getAttribute('id') + '은 필수 입력사항입니다.');
+                        check = false;
                         return false;
+
                     }
-                });
-                if(!empty) return false;
-                $('form').submit();
-            }
-          /*  $('#join').on('submit', function (event) {
-                var inputs = $('.inputs');
 
+                    console.log(val);
+                }
+                $('#form').submit();
 
-                inputs.each(function () {
-                    if($(this).val()==''){
-                        alert($(this).attr('id')+ '은 필수 입력사항입니다.');
-                        $(this).focus();
-                        empty= false;
-                        return false;
-                    }
-                });
+            })
 
 
 
-            })*/
+
+
+            //console.log(check);
+            /*  inputs.each(function () {
+                  if($(this).val() === ''){
+                      alert($(this).attr('id')+ '은 필수 입력사항입니다.');
+                      $(this).focus();
+                      check= false;
+                      return false;
+
+                  }
+              });*/
+
 
         });
-
 
 
     </script>
@@ -246,7 +258,7 @@
                 Woman
             </label>
         </div>
-        <button type="button" class="btn btn-primary" id="join" onclick="$.aa()">JOIN</button>
+        <button type="button" class="btn btn-primary" id="join">JOIN</button>
     </fieldset>
 </form>
 
