--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -20,12 +20,21 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
         table{
-            max-width: 80%;
-            margin: 50px auto;
+            min-width: 50%;
+            margin: 50px 0;
         }
         .pager{
           margin: auto;
           width: max-content;
+            clear: both;
+        }
+        .divTable{
+
+            max-width: 80%;
+            margin: auto;
+        }
+        #insert{
+            float: right;
         }
     </style>
 </head>
@@ -66,6 +75,7 @@
         </form>
     </div>
 </nav>
+<div class="divTable">
 <table class="table table-hover">
     <thead>
     <tr>
@@ -88,6 +98,9 @@
     </tr>
     </tbody>
 </table>
+
+<button type="button" class="btn btn-primary" id="insert">글쓰기</button>
+</div>
 <div class="pager">
     <ul class="pagination pagination-sm">
         <li class="page-item disabled">
