--- a/src/main/resources/templates/member/memberJoin.html
+++ b/src/main/resources/templates/member/memberJoin.html
@@ -182,10 +182,7 @@
 
                   }
               });*/
-
-
         });
-
 
     </script>
     <style>
@@ -252,7 +249,7 @@
         <div class="form-group">
             <label for="id">ID</label>
             <input type="text" class="form-control inputs" id="id" name="id" aria-describedby="idHelp"
-                   placeholder="Enter email">
+                   placeholder="Enter ID">
             <small id="idHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
