--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -3,46 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <title>member Form</title>
+    <!--    마지막에 변경
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/JavaScript" href="js/bootstrap.min.js"></script>-->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <style>
+        form {
+            margin: 50px auto;
+            width: max-content;
+        }
+
+        .inputs {
+            min-width: 400px;
+        }
+
+        #join {
+            margin-top: 30px;
+            float: right;
+        }
+
+        .help p {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-<div class="div-form">
-    <form action="/member/modify" method="post">
-        <label>
-            <span>ID : </span>
-            <input type="text" name="id" autofocus placeholder="id를 입력하세요"/>
-        </label><br>
-        <label>
-            <span>PW : </span>
-            <input type="password" name="pw"/>
-        </label><br>
-        <label>
-            <span>NAME : </span>
-            <input type="text" name="name"/>
-        </label><br>
-        <label>
-            <span>ADDRESS : </span>
-            <input type="text" name="address"/>
-        </label><br>
-        <label>
-            <span>PHONE : </span>
-            <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" title="010-0000-0000"/>
-        </label><br>
-        <label>
-            <span>EMAIL : </span>
-            <input type="text" name="email"/>
-        </label><br>
-        <label>
-            <span>GENDER : M</span>
-            <input type="radio" name="gender" value="M"/>
-        </label>
-        <label for="W">
-            <span>W</span>
-        </label>
-        <input type="radio" name="gender" id="W" value="W"/><br>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#"> <font style="vertical-align : inherit;"> <font style="vertical-align : inherit;">
+        Woom </font> </font> </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="# navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="false" aria-label="탐색 ">
+        <span class="navbar-toggler-icon"> </span>
+    </button>
 
-        <input type="submit" id="join" value="Join"/>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 홈 </font> </font> <span class="sr-only"> <font
+                        style="vertical-align : inherit;"> <font style="vertical-align : inherit;"> (현재) </font> </font> </span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 풍모 </font> </font> </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 가격 </font> </font> </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"> <font style="vertical-align : inherit;"> <font
+                        style="vertical-align : inherit;"> 약 </font> </font> </a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" 자리 표시 자="검색">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit"><font style="vertical-align : inherit;"> <font
+                    style="vertical-align : inherit;"> 검색 </font> </font></button>
+        </form>
+    </div>
+</nav>
+<form id="form" action="/join" method="post">
+    <fieldset>
+        <legend>회원수정</legend>
 
-    </form>
-</div>
+        <div class="form-group">
+            <label for="id">ID</label>
+            <input type="text" class="form-control inputs" id="id" name="id" aria-describedby="idHelp"
+                   readonly value="">
+            <small id="idHelp" class="form-text text-muted help"><p></p></small>
+        </div>
+
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control inputs" id="name" name="name" readonly value="">
+            <small id="namelHelp" class="form-text text-muted help"><p></p></small>
+        </div>
+        <div class="form-group">
+            <label for="address">Address</label>
+            <input type="text" class="form-control inputs" id="address" name="address" value="">
+            <small id="addresslHelp" class="form-text text-muted help"><p></p></small>
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control inputs" id="phone" name="phone" value="">
+            <small id="phoneHelp" class="form-text text-muted help"><p></p></small>
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control inputs" id="email" name="email"  readonly value="">
+            <small id="emailHelp" class="form-text text-muted help"><p></p></small>
+        </div>
+
+        <button type="button" class="btn btn-primary" id="update">UPDATE</button>
+    </fieldset>
+</form>
 </body>
 </html>
