--- a/src/main/resources/templates/member/memberLogin.html
+++ b/src/main/resources/templates/member/memberLogin.html
@@ -67,10 +67,10 @@
     <div class="card-body">
         <form class="form-signin" method="POST" onSubmit="logincall();return false">
             <h5 class="form-signin-heading">로그인 정보를 입력하세요</h5>
-            <label for="inputEmail" class="sr-only">Your ID</label>
-            <input type="text" id="uid" class="form-control" placeholder="Your ID" required autofocus><BR>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="upw" class="form-control" placeholder="Password" required><br>
+            <label for="id" class="sr-only">Your ID</label>
+            <input type="text" id="id" name="id" class="form-control" placeholder="Your ID" required autofocus><BR>
+            <label for="pw" class="sr-only">Password</label>
+            <input type="password" id="pw" name="pw" class="form-control" placeholder="Password" required><br>
             <div class="checkbox">
                 <label>
                     <input type="checkbox" value="remember-me"> 기억하기
