멤버 컨트롤러 약간 수정

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="board/list"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 게시판 </font> </font> </a>
             </li>
             <li class = "nav-item">
-                <a class="nav-link" href="#"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 가격 </font> </font> </a>
+                <a class="nav-link" href="/member/one"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 회원 </font> </font> </a>
             </li>
             <li class = "nav-item">
                 <a class="nav-link" href="/member/login"> <font style = "vertical-align : inherit;"> <font style = "vertical-align : inherit;"> 가입 </font> </font> </a>
