--- a/src/main/resources/templates/member/memberLogin.html
+++ b/src/main/resources/templates/member/memberLogin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -56,16 +56,21 @@
             font-size: 16px;
         }
     </style>
+    <script>
+        $(function () {
+
+        })
+    </script>
 </head>
 
 <body cellpadding="0" cellspacing="0" marginleft="0" margintop="0" width="100%" height="100%" align="center">
 
 <div class="card align-middle" style="width:20rem; border-radius:20px;">
     <div class="card-title" style="margin-top:30px;">
-        <h2 class="card-title text-center" style="color:#113366;">로그인 폼</h2>
+        <h2 class="card-title text-center" style="color:#113366;">로그인</h2>
     </div>
     <div class="card-body">
-        <form class="form-signin" method="POST" onSubmit="logincall();return false">
+        <form class="form-signin" method="POST" action="/member/login"> <!--onSubmit="logincall();return false"-->
             <h5 class="form-signin-heading">로그인 정보를 입력하세요</h5>
             <label for="id" class="sr-only">Your ID</label>
             <input type="text" id="id" name="id" class="form-control" placeholder="Your ID" required autofocus><BR>
