--- a/src/main/resources/templates/member/memberOne.html
+++ b/src/main/resources/templates/member/memberOne.html
@@ -1,7 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+
     <title>member Form</title>
     <!--    마지막에 변경
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -18,6 +20,19 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('#update').on('click',function () {
+                location.href='/member/modify'
+            })
+            $('#pwUpdate').on('click',function () {
+                location.href='/member/modify'
+            })
+            $('#delete').on('click',function () {
+                location.href='/member/delete'
+            })
+        })
+    </script>
     <style>
         form {
             margin: 50px auto;
@@ -78,36 +93,38 @@
 <form id="form" action="/join" method="post">
     <fieldset>
         <legend>회원수정</legend>
-
+            <input type="hidden" name="num" value="${member.num}" disabled>
         <div class="form-group">
             <label for="id">ID</label>
             <input type="text" class="form-control inputs" id="id" name="id" aria-describedby="idHelp"
-                   readonly value="">
+                   disabled value="${member.id}">
             <small id="idHelp" class="form-text text-muted help"><p></p></small>
         </div>
 
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control inputs" id="name" name="name" readonly value="">
+            <input type="text" class="form-control inputs" id="name" name="name" disabled value="${member.name}">
             <small id="namelHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="address">Address</label>
-            <input type="text" class="form-control inputs" id="address" name="address" value="">
+            <input type="text" class="form-control inputs" id="address" name="address" disabled value="${member.address}">
             <small id="addresslHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="text" class="form-control inputs" id="phone" name="phone" value="">
+            <input type="text" class="form-control inputs" id="phone" name="phone" disabled value="${member.phone}">
             <small id="phoneHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" class="form-control inputs" id="email" name="email"  readonly value="">
+            <input type="email" class="form-control inputs" id="email" name="email"  disabled value="${member.email}">
             <small id="emailHelp" class="form-text text-muted help"><p></p></small>
         </div>
 
-        <button type="button" class="btn btn-primary" id="update">UPDATE</button>
+        <button type="button" class="btn btn-primary" id="update">정보 수정</button>
+        <button type="button" class="btn btn-primary" id="pwUpdate">비번 수정</button>
+        <button type="button" class="btn btn-primary" id="delete">회원 탈퇴</button>
     </fieldset>
 </form>
 </body>
