--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -37,6 +37,13 @@
             color: red;
         }
     </style>
+    <script>
+        $(function () {
+            $('#update').on('click',function () {
+                $('#form').submit();
+            })
+        })
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -75,35 +82,35 @@
         </form>
     </div>
 </nav>
-<form id="form" action="/join" method="post">
+<form id="form" action="/member/modify" method="post" th:object="${session.member}">
     <fieldset>
         <legend>회원수정</legend>
 
         <div class="form-group">
             <label for="id">ID</label>
             <input type="text" class="form-control inputs" id="id" name="id" aria-describedby="idHelp"
-                   readonly value="">
+                   readonly th:value="*{id}">
             <small id="idHelp" class="form-text text-muted help"><p></p></small>
         </div>
 
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control inputs" id="name" name="name" readonly value="">
+            <input type="text" class="form-control inputs" id="name" name="name" readonly th:value="*{name}">
             <small id="namelHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="address">Address</label>
-            <input type="text" class="form-control inputs" id="address" name="address" value="">
+            <input type="text" class="form-control inputs" id="address" name="address" th:value="*{address}">
             <small id="addresslHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="text" class="form-control inputs" id="phone" name="phone" value="">
+            <input type="text" class="form-control inputs" id="phone" name="phone" th:value="*{phone}">
             <small id="phoneHelp" class="form-text text-muted help"><p></p></small>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" class="form-control inputs" id="email" name="email"  readonly value="">
+            <input type="email" class="form-control inputs" id="email" name="email"  readonly th:value="*{email}">
             <small id="emailHelp" class="form-text text-muted help"><p></p></small>
         </div>
 
