--- a/src/main/resources/templates/member/memberLogin.html
+++ b/src/main/resources/templates/member/memberLogin.html
@@ -14,6 +14,7 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
@@ -29,14 +30,14 @@
         }
 
         body {
-            width:100%;
-            height:100%;
+            width: 100%;
+            height: 100%;
             margin: 0;
             padding-top: 80px;
             padding-bottom: 40px;
             font-family: "Nanum Gothic", arial, helvetica, sans-serif;
             background-repeat: no-repeat;
-            background:linear-gradient(to bottom right, #0098FF, #6BA8D1);
+            background: linear-gradient(to bottom right, #0098FF, #6BA8D1);
         }
 
         .card {
@@ -57,8 +58,29 @@
         }
     </style>
     <script>
-        $(function () {
+        $(document).ready(function () {
+            var idC= $('#id').val();
+            var pwC= $('#pw').val();
+            $('#btn-Yes').on('click', function () {
 
+            });
+
+            $.ajax({
+                url: 'member/login',
+                type: 'POST',
+                data: {
+                    'id':idC,
+                    'pw':pwC
+                },
+                success: function (data) {
+                    if (data === 1) {
+                        $('form').submit();
+                    } else {
+                        alert('아이디 , 비밀번호가 틀립니다.');
+                        location.reload();
+                    }
+                }
+            })
         })
     </script>
 </head>
@@ -81,7 +103,7 @@
                     <input type="checkbox" value="remember-me"> 기억하기
                 </label>
             </div>
-            <button id="btn-Yes" class="btn btn-lg btn-primary btn-block" type="submit">로 그 인</button>
+            <button id="btn-Yes" class="btn btn-lg btn-primary btn-block" type="button">로 그 인</button>
         </form>
 
     </div>
@@ -91,8 +113,14 @@
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
