--- a/src/main/resources/templates/member/memberJoin.html
+++ b/src/main/resources/templates/member/memberJoin.html
@@ -35,11 +35,11 @@
                 if (!regExpId.test(idVal)) {
                     $('#idHelp p').text('영문으로 시작하는 6~20자 영문 또는 숫자이어야 합니다.');
                     checkId = false;
-                    console.log('idFalse:', checkForm);
+
                     return false;
                 } else {
                     $.ajax({
-                        url: 'idCheck',
+                        url: '/idCheck',
                         type: 'POST',
                         data: {
                             'id': idVal
@@ -48,15 +48,18 @@
                             if (idVal === data) {
                                 $('#idHelp p').text('중복된 id 입니다.');
                                 checkId =  false;
-                                console.log('idFalse:', checkForm);
+
                                 return false;
                             } else {
                                 $('#idHelp p').text("사용 가능합니다");
                                 checkId =  true;
-                                console.log('idTrue:', checkForm);
+
 
                             }
 
+                        },
+                        error: function (error) {
+                            console.log(error);
                         }
                     })
                 }
@@ -69,12 +72,12 @@
                 if (!regExpPw.test($('#pw').val())) {
                     $('#pwHelp p').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
                     checkPw =  false;
-                    console.log('pwFalse:', checkForm);
+
                     return false;
                 } else {
                     $('#pwHelp p').text('사용가능한 비밀번호입니다.');
                     checkPw =  true;
-                    console.log('pwTrue:', checkForm);
+
                 }
             });
 
@@ -84,12 +87,12 @@
                 if ($('#pw').val() !== $('#pw2').val()) {
                     $('#pw2Help p').text('비밀번호가 일치하지 않습니다.');
                     checkPw2 =  false;
-                    console.log('pw2False:', checkForm);
+
                     return false;
                 } else {
                     $('#pw2Help p').text('');
                     checkPw2 =  true;
-                    console.log('pw2True:', checkForm);
+
 
                 }
 
@@ -103,12 +106,12 @@
                 if (!regExpPw.test($('#phone').val())) {
                     $('#phoneHelp p').text('올바른 핸드폰번호가 아닙니다.');
                     checkPhone =  false;
-                    console.log('phoneFalse:', checkForm);
+
                     return false;
                 } else {
                     $('#phoneHelp p').text('');
                     checkPhone =  true;
-                    console.log('phoneTrue:', checkForm);
+
                 }
             });
             //이메일 체크
@@ -118,12 +121,12 @@
                 if (!regExpEmail.test($('#email').val())) {
                     $('#emailHelp p').text('올바른 이메일이 아닙니다.');
                     checkEmail =  false;
-                    console.log('emailFalse:', checkForm);
+
                     return false;
                 } else {
                     $('#emailHelp p').text('');
                     checkEmail =  true;
-                    console.log('emailTrue:', checkForm);
+
                 }
             });
 
