--- a/src/main/resources/templates/member/memberList.html
+++ b/src/main/resources/templates/member/memberList.html
@@ -19,13 +19,14 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
-        table{
+        table {
             max-width: 80%;
             margin: 50px auto;
         }
-        .pager{
-          margin: auto;
-          width: max-content;
+
+        .pager {
+            margin: auto;
+            width: max-content;
         }
     </style>
 </head>
@@ -40,41 +41,33 @@
         <th scope="col">Address</th>
         <th scope="col">Phone</th>
         <th scope="col">Email</th>
+        <th scope="col">Gender</th>
+        <th scope="col">Join_date</th>
     </tr>
     </thead>
     <tbody>
-    <tr class="table-primary">
-        <th scope="row">1</th>
-        <td>member1</td>
-        <td>iu</td>
-        <td>서울 서대문구 홍제동 321-1</td>
-        <td>010-0000-0000</td>
-        <td>ssinga1@naver.com</td>
+    <tr class="table-primary" th:each="member : ${list}">
+        <th scope="row" th:text="${member.num}"></th>
+        <td th:text="${member.id}"></td>
+        <td th:text="${member.name}"></td>
+        <td th:text="${member.address}"></td>
+        <td th:text="${member.phone}"></td>
+        <td th:text="${member.email}"></td>
+        <td th:text="${member.gender}"></td>
+        <td th:text="${member.join_date}"></td>
     </tr>
     </tbody>
 </table>
 <div class="pager">
     <ul class="pagination pagination-sm">
-        <li class="page-item disabled">
-            <a class="page-link" href="#">&laquo;</a>
+        <li class="page-item" th:if="${pager.prev}==true">
+            <a class="page-link" th:href="@{/member/list(page=${pager.startPage}-1,perPageNum=${pager.perPageNum})}">&laquo;</a>
         </li>
-        <li class="page-item active">
-            <a class="page-link" href="#">1</a>
+        <li class="page-item" th:each="idx,iterStat : ${#numbers.sequence(pager.startPage, pager.endPage)}" th:classappend="${pager.page} == ${idx} ? active : null">
+            <a class="page-link" th:href="@{/member/list(page=${idx},perPageNum=${pager.perPageNum})}" th:text="${idx}"></a>
         </li>
-        <li class="page-item">
-            <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">4</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">5</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">&raquo;</a>
+        <li class="page-item" th:if="${pager.next}==true and ${pager.endPage >0}">
+            <a class="page-link" th:href="@{/member/list(page=${pager.endPage}+1,perPageNum=${pager.perPageNum})}">&raquo;</a>
         </li>
     </ul>
 </div>
