--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -33,7 +33,7 @@
             max-width: 80%;
             margin: auto;
         }
-        #insert{
+        #write{
             float: right;
         }
     </style>
