--- a/src/main/resources/templates/board/boardOne.html
+++ b/src/main/resources/templates/board/boardOne.html
@@ -19,28 +19,42 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <style>
-
-    </style>
+    <script>
+        $(function () {
+            $('#delete').on('click', function () {
+                location.href='/notice/delete';
+            })
+        })
+        $(function () {
+            $('#update').on('click', function () {
+                location.href='/notice/modify';
+            })
+        })
+        $(function () {
+            $('#list').on('click', function () {
+                location.href='/notice/list';
+            })
+        })
+    </script>
 </head>
 <body>
 <div th:replace="fragment/nav :: nav"></div>
 <!--기본 셋팅.. -->
 <div class="container p-3 my-3 border">
     <div class="row">
-        <div class="col-sm-8 p-2" style="background-color:lavender; text-align: left; border:  1px red solid ;">아이디
+        <div class="col-sm-8 p-2" style="background-color:lavender; text-align: left; border:  1px red solid ;" th:text="${notice.writer}">
         </div>
         <div class="col-sm-4 p-2" style="background-color:lavenderblush; text-align: right; border:  1px solid red;">
-            <i class='far fa-eye'> 33</i>
-            <span class="badge badge-pill badge-primary">2020/02/08</span>
+            <i class='far fa-eye' th:text="${notice.hit}"></i>
+            <span class="badge badge-pill badge-primary" th:text="${notice.lastModifiedDate}"></span>
         </div>
         <div class="col-sm-12 pl-2 pb-0" style="background-color:#ffb0d3; ">
-            <div class="col-sm-12">num</div>
-            <div class="col-sm-12"><h2>제목</h2></div>
+            <div class="col-sm-12" th:text="${notice.num}"></div>
+            <div class="col-sm-12"><h2 th:text="${notice.title}"></h2></div>
         </div>
-        <div class="col-sm-12" style="background-color:lavender; text-align: left; height: 300px; ">
+        <div class="col-sm-12" style="background-color:lavender; text-align: left; height: 300px; " th:text="${notice.content}">
             <hr/>
-            내용
+
         </div>
 
     </div>
@@ -66,7 +80,7 @@
 
         <!--댓글 입력창 -->
         <div class="col-sm-12 pl-2 pb-0 " style="background-color:#ffb0d3; ">
-            <div class="col-sm-12" style="background-color:#99abff;">아이디</div>
+            <div class="col-sm-12" style="background-color:#99abff;" th:text="${session.member.id}"></div>
         </div>
         <div class="col-sm-10" style="background-color:lavenderblush;">
             <form id="form" action="/" method="post">
@@ -77,7 +91,7 @@
             </form>
         </div>
         <div class="col-sm-2 pt-5 pr-md-0" style="background-color:#94ff8b;">
-            <button type="button" class="btn btn-primary ml-auto" id="insert">등록</button>
+            <button type="button" class="btn btn-primary ml-auto" id="write">등록</button>
         </div>
 
 
