--- a/src/main/resources/templates/member/memberOne.html
+++ b/src/main/resources/templates/member/memberOne.html
@@ -24,13 +24,14 @@
         $(function () {
             $('#update').on('click',function () {
                 location.href='/member/modify'
-            })
+            });
             $('#pwUpdate').on('click',function () {
-                location.href='/member/modify'
-            })
+
+                location.href='/member/modifyPw'
+            });
             $('#delete').on('click',function () {
                 location.href='/member/delete'
-            })
+            });
         })
     </script>
     <style>
