--- a/src/main/resources/templates/board/boardModify.html
+++ b/src/main/resources/templates/board/boardModify.html
@@ -27,7 +27,7 @@
             margin-bottom: 0;
             height: 500px;
         }
-        #insert {
+        #update {
             padding: 15px 30px;
             margin-top: 30px;
             float: right;
@@ -39,37 +39,28 @@
 <form id="form" action="/join" method="post">
     <fieldset>
         <legend>글쓰기</legend>
-        <div class="form-group">
 
-            <input type="hidden" class="form-control inputs" id="num" name="num"
-                   disabled th:value="${session.member.num}">
-
-        </div>
 
         <div class="form-group">
             <label for="id">ID</label>
-            <input type="text" class="form-control inputs" id="id" name="id" aria-describedby="idHelp"
+            <input type="text" class="form-control inputs" id="id" name="writer" aria-describedby="idHelp"
                    disabled th:value="${session.member.id}">
             <small id="idHelp" class="form-text text-muted help"><p></p></small>
         </div>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control inputs" id="name" name="name" disabled th:value="${session.member.name}">
-            <small id="namelHelp" class="form-text text-muted help"><p></p></small>
-        </div>
+
         <div class="form-group">
             <label for="title">Title</label>
-            <input type="text" class="form-control inputs" id="title" name="title" th:value="${board.title}">
+            <input type="text" class="form-control inputs" id="title" name="title" th:value="${notice.title}">
             <small id="titleHelp"  class="form-text text-muted help"><p></p></small>
         </div>
 
         <div class="form-group">
             <label for="content">Content</label>
-            <textarea class="form-control" id="content" name="content" rows="3" th:text="${board.content}"></textarea>
+            <textarea class="form-control" id="content" name="content" rows="3" th:text="${notice.content}"></textarea>
         </div>
 
 
-        <button type="button" class="btn btn-primary" id="insert">수정</button>
+        <button type="button" class="btn btn-primary" id="update">수정</button>
     </fieldset>
 </form>
 
